# visa-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.tmp/benchmark_db/: task_001_basic_validate_dry_run.sqlite  task_002_unit_based_voltage_sweep.sqlite  task_003_template_override_run.sqlite  task_004_verify_mismatch.sqlite  task_005_partial_failure_group.sqlite
benchmarks/: README.md
benchmarks/fixtures/: system_config_basic.yaml  system_config_partial_failure.yaml
benchmarks/fixtures/instruments/: mock_dmm.yaml  mock_psu.yaml  mock_temp.yaml
benchmarks/repair/repair_006_partial_failure_retry/: task.yaml
benchmarks/tasks/: task_001_basic_validate_dry_run.yaml  task_002_unit_based_voltage_sweep.yaml  task_003_template_override_run.yaml  task_004_verify_mismatch.yaml  task_005_partial_failure_group.yaml
docs/: STEP4_CONVENTION_ALIGNMENT.md  adding_instruments.md  backend_abstraction.md  benchmark_repair.md  bundle_export.md  category_policy.md  definition_packs.md  error_taxonomy.md  extension_catalog.md  extension_install.md  extension_integrity.md  extension_packaging.md  extension_policy.md  instrument_authoring.md  instrument_promote_check.md  jobs.md  mcp_tools_reference.md  naming_and_repository_strategy.md  operational_integrity.md  raw_visa.md  recipes.md  registry_contribution.md  replay_backend_concept.md  response_formats.md  result_export.md  safety.md  v1_stability_policy.md  v2_migration.md
docs/dsl/examples/: README.md
docs/dsl/examples/basic_voltage_set_and_measure/: README.md  expected_dry_run.json  plan.json
docs/dsl/examples/partial_failure_group_measurement/: README.md  expected_dry_run.json  plan.json
docs/dsl/examples/safe_shutdown_explicit_targets/: README.md  expected_dry_run.json  plan.json
docs/dsl/examples/voltage_sweep_with_wait/: README.md  expected_dry_run.json  plan.json
docs/dsl/examples/voltage_sweep_with_wait_for_stable/: README.md  expected_dry_run.json  plan.json
docs/en/: concepts.md  quickstart.md
docs/separation/: dependency_graph.md  module_ownership.yaml  notes.md  split_manifest.yaml
examples/: analyze_heating.py  experiment_resistor_heating.py  verify_connection.py
examples/extensions/mock_basic_pack/: README.md  extension.yaml
examples/extensions/mock_basic_pack/instruments/: mock_dmm.yaml  mock_psu.yaml
examples/instruments/: kikusui_pmx35_3a.yaml  yokogawa_7563.yaml
instruments/: _system.example.yaml  _template.yaml
registry/: INDEX.yaml  README.md
registry/instruments/mock/: mock_temp.yaml
schemas/: benchmark_task.schema.json  dsl.schema.json  extension_manifest.schema.json  instrument.schema.json  system_config.schema.json
scripts/: _realhw_v2_6_shim.py  bootstrap_lab_executor.py  generate_dsl_examples.py  generate_schemas.py
src/visa_mcp/: __init__.py  audit.py  bus_manager.py  cli.py  discovery.py  extension.py  extension_authoring.py  extension_catalog.py  extension_install.py  extension_integrity.py  instrument_authoring.py  instrument_registry.py  recipe_executor.py  registry.py  response_envelope.py  response_parser.py  safety.py  server.py  session_manager.py  session_store.py  stability.py  state_query.py  step_executor.py  system_config.py  visa_manager.py
src/visa_mcp/backends/: __init__.py  base.py  pyvisa_backend.py
src/visa_mcp/builtin_instruments/: yokogawa_7563.yaml
src/visa_mcp/dev/: dependency_report.py  ownership_check.py  split_rehearsal.py
src/visa_mcp/dsl/: compiler.py
src/visa_mcp/experiment_ir/: __init__.py  step.py
src/visa_mcp/group/: __init__.py  barrier.py  executor.py  resolver.py  target.py
src/visa_mcp/job/: __init__.py  manager.py  state_machine.py  store.py
src/visa_mcp/models/: instrument_def.py
src/visa_mcp/templates/instruments/: dmm.yaml  generic_scpi.yaml  power_supply.yaml  temperature_meter.yaml
src/visa_mcp/testing/: __init__.py  benchmark_runner.py  benchmark_task.py  mock_instruments.py
src/visa_mcp/tools/: audit.py  commands.py  discovery.py  dsl.py  export.py  groups.py  info.py  jobs.py  monitor.py  pdf_extractor.py  recipes.py
src/visa_mcp/utils/: expression.py  idn_matcher.py  param_validator.py
tests/: test_backend_conformance.py  test_backend_discovery.py  test_barrier_stagger_v061.py  test_barrier_stagger_v0611.py  test_benchmark_v090.py  test_dsl_v081.py  test_dsl_v0811.py  test_expression.py  test_group_map_v060.py  test_idn_matcher.py  test_instrument_registry.py  test_job_manager.py  test_job_state_machine.py  test_job_store.py  test_job_timeout.py  test_param_validator.py  test_persistence_verify_v070.py  test_persistence_verify_v0701.py  test_raw_commands.py  test_recipe_executor.py  test_recommended_next_actions.py  test_repo_format_guard.py  test_response_parser.py  test_resume_v090.py  test_safety.py  test_separation_boundary.py  test_session_manager.py  test_v0911_review.py  test_v091_repair_export.py  test_v092_ecosystem.py  test_v093_audit_locks.py  test_v101_review.py  test_v11.py  test_v110_separation_audit.py  test_v111_review.py  test_v111_separation_refactor.py  test_v12_extension.py  test_v141_review.py  test_v151_review.py  test_v15_extension_packaging.py  (+17 more)
tests/mock_instruments/: mock_visa.py
