[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visa-mcp"
version = "2.3.5"
description = "PyVISA backend + compatibility shim for lab-executor-mcp. Hardware (GPIB / USB / Serial / LAN) communication layer."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "pyvisa", "gpib", "scpi", "instrument-control", "laboratory-automation", "fastmcp", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
dependencies = [
    # v2.0: runtime / DSL / extension ecosystem は lab-executor-mcp
    # 側へ移った。visa-mcp は PyVISA backend + 旧 import shim。
    "lab-executor-mcp>=2.14.3,<3.0.0",
    "pyvisa>=1.14.0",
    "pydantic>=2.0.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
]

[project.urls]
Homepage = "https://github.com/TECTOS-JP/visa-mcp"
Issues = "https://github.com/TECTOS-JP/visa-mcp/issues"

[project.scripts]
visa-mcp = "visa_mcp.cli:main"

[tool.hatch.build.targets.wheel]
# `packages = ["src/visa_mcp"]` により src/visa_mcp 配下の全ファイル
# (templates/, builtin_instruments/ の YAML 含む) が wheel に入る。
# v2.3.5: builtin_instruments を force-include にも入れていたため
# `_system.yaml` が二重追加されて wheel build が失敗していた
# (Codex v2.3.4 レビュー P0)。packages 側で既に含まれるので
# force-include からは外す。templates も同様に packages で含まれる。
packages = ["src/visa_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "hardware: 実機が接続されている環境でのみ実行 (pytest -m hardware)",
]
